--- a/Tests/fixtures/smartphone-26.yml
+++ b/Tests/fixtures/smartphone-26.yml
@@ -936,7 +936,7 @@
   os_family: Android
   browser_family: Unknown
 -
-  user_agent: Mozilla/5.0 (Linux; Android 11; SM-A305YN Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/91.0.4472.120 Mobile Safari/537.36  trill_2022001020 JsSdk/1.0 NetType/WIFI Channel/googleplay AppName/musical_ly app_version/20
+  user_agent: Mozilla/5.0 (Linux; Android 11; SM-A305YN Build/RP1A.200720.012; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/91.0.4472.120 Mobile Safari/537.36
   os:
     name: Android
     version: "11"
