Detect libs, mediaplayers and apps (#6701)
* added a list of useragents

* added a list of podcatcher applications

* added podcatchers to mediaplayer.yml

* added Podcast players

* typo fixed

* regexes cleaned

* added Downcast

* chore: add test Foobar2000
chore: remove WordPress rule is lib (defined early as a bot)
chore: remove WWW-Mechanize rule is lib (dublicate)

* chore: add test Foobar2000
chore: remove WordPress rule is lib (defined early as a bot)
chore: remove WWW-Mechanize rule is lib (dublicate)
feat(mediaplayer): change type `fead reader` type to `mediaplayer` for app Downcast

* chore: remove Music Player Daemon
chore: remove AntennaPod
chore: remove BashPodder

* set Downcast set correct client type

* feat(test) add test Aria2

* feat(test) add test Sony Media Go

* feat(test) add test HTC Streaming Player

* feat(test) add test gvfs

* feat(test) add test Downcast iTunes

* feat(app) detect app Pocket Casts

* feat(app) detect app DevCasts

* feat(app) detect apps: Gaana, Aha Radio 2, Unibox

Co-authored-by: Falk Stern <falk.stern@xing.com>
Co-authored-by: Falk Stern <falk@fourecks.de>
Co-authored-by: Tutik Alexsandr <sanchezzzhak@yandex.ru>

--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -99,7 +99,7 @@
   user_agent: Podkicker Pro/1.9.4
   client:
     type: mobile app
-    name: Podkicker
+    name: Podkicker Pro
     version: "1.9.4"
 -
   user_agent: Castro/64 CFNetwork/672.1.15 Darwin/14.0.0
@@ -652,4 +652,46 @@
   client:
     type: mobile app
     name: COAF SMART Citizen
+    version: ""
+-
+  user_agent: Podkicker Classic/1.2.9
+  client:
+    type: mobile app
+    name: Podkicker Classic
+    version: 1.2.9
+-
+  user_agent: iTunes/10.7 Downcast/2.8.24.1002
+  client:
+    type: mobile app
+    name: Downcast
+    version: 2.8.24.1002
+-
+  user_agent: Pocket Casts
+  client:
+    type: mobile app
+    name: Pocket Casts
+    version: ""
+-
+  user_agent: devcasts/1.0.3.24 CFNetwork/1240.0.4 Darwin/20.5.0
+  client:
+    type: mobile app
+    name: DevCasts
+    version: 1.0.3.24
+-
+  user_agent: GaanaAndroid-8.27.3/Dalvik/2.1.0 (Linux; U; Android 9; Redmi Note 8 MIUI/V11.0.6.0.PCOINXM)
+  client:
+    type: mobile app
+    name: Gaana
+    version: 8.27.3
+-
+  user_agent: AhaRadio2/8.12.3 CFNetwork/976 Darwin/18.2.0
+  client:
+    type: mobile app
+    name: Aha Radio 2
+    version: 8.12.3
+-
+  user_agent: Unibox/428 CFNetwork/811.5.4 Darwin/16.6.0 (x86_64)
+  client:
+    type: mobile app
+    name: Unibox
     version: ""
