--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -204,16 +204,16 @@ HTC:
 
     - regex: 'NexusHD2' # custom rom for hd2
       model: 'HD2'
-    - regex: 'HTC[ _\-]P715a'
+    - regex: 'HTC[ _-]P715a'
       device: 'tablet'
       model: 'P715a'
-    - regex: 'HTC[ _\-]Flyer Build'
+    - regex: 'HTC[ _-]Flyer Build'
       device: 'tablet'
       model: 'Flyer'
-    - regex: 'HTC[ _\-]Flyer[ _\-]([\w]{1,5})'
+    - regex: 'HTC[ _-]Flyer[ _\-]([\w]{1,5})'
       device: 'tablet'
       model: 'Flyer $1'
-    - regex: 'HTC(?:[ _\-])?(?:One[ _\-]max|6600LVW)(?:[);/ ]|$)'
+    - regex: 'HTC(?:[ _-])?(?:One[ _\-]max|6600LVW)(?:[);/ ]|$)'
       device: 'phablet'
       model: 'One Max'
     - regex: 'HTC[ _]([^/;]+) [0-9]+(?:\.[0-9]+)+ Build'
@@ -16191,7 +16191,7 @@ Ok:
 
 # Kindle
 Amazon:
-  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(BC|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+'
+  regex: '(?:AFT[ABMNRST]|AFTSSS?|SD4930UR|AEO(BC|KN)|KF(?:OT|ONWI|TT|JWI|JWA|[DFS]OWI|A[PRSU]WI|T[BH]WI|SAW[IA]|GIWI|KAWI|MAWI|MEWI|MUWI|SUWI))(?:[);/ ]|$)|Kindle|AlexaMediaPlayer|Amazon (?:Tate|Jem)|Silk/\d+\.\d+|Echo/1'
   device: 'tablet'
   models:
     - regex: 'AFTA'
@@ -16270,7 +16270,7 @@ Amazon:
     - regex: 'Kindle'
       model: 'Kindle'
 
-    - regex: 'AEO(BC|KN)(?:[);/ ]|$)'
+    - regex: 'Echo/1|AEO(?:BC|KN)(?:[);/ ]|$)'
       model: 'Echo'
       device: 'smart speaker'
     - regex: 'AlexaMediaPlayer'
