--- a/Tests/Parser/Client/fixtures/library.yml
+++ b/Tests/Parser/Client/fixtures/library.yml
@@ -233,3 +233,21 @@
     type: library
     name: Akka HTTP
     version: 10.1.11
+-
+  user_agent: BTWebClient/2020(19648)
+  client:
+    type: library
+    name: uTorrent
+    version: ""
+
+- user_agent: aria2/1.33.1
+  client:
+    type: library
+    name: Aria2
+    version: 1.33.1
+
+- user_agent: gvfs/1.34.1
+  client:
+    type: library
+    name: gvfs
+    version: 1.34.1
