feat(device) detect brand Lenco model: Diverso 700 feat(device) detect brand iVA model: S6 feat(device) detect brand Doogee models: Y6 Piano, Y6 Piano Black, Y6 Max, Y6 Max 3D feat(device) detect brand MyPhone model: Q-Smart III Plus feat(device) detect brand M-Horse models: Pure 1, Pure 2 feat(device) detect brand Dialog models: TabPro, Q178 feat(device) detect brand Digma model: CITI MOTION 4G (CS5025PL) feat(device) reduced rules for Digma, the conditions are combined into one rule
sd

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4922,7 +4922,7 @@ Dbtel:
 
 # Dialog
 Dialog:
-  regex: 'Dialog ?([^;/]+) Build'
+  regex: 'Dialog ?([^;/]+)(?: Build|[;)])'
   device: 'smartphone'
   model: '$1'
 
@@ -4960,7 +4960,7 @@ Digiland:
 
 # Digma
 Digma:
-  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI (?:7 E401 4G|8 E400 4G|ATL 4G|Kids|Octa [178]0|1902 3G|10 E402|Z530 3G)|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](606[32]ML|111[46]ML|11[459]4MG|1117PG|1207MG|1210MG|1195MG|1196ML|3001ML|4024PG|5009PL|5021ML|5026PL|500[67]PG|7052PG|706[56]MG|709[68]PL|7097MG|720[48]MG|7140ML|7141MG|7113PL|7193MG|820[69]MG|7153MG|8139ML|8143MG|8152ML|1050PL|8205PG|7203MG|106[24]ML|1115MG)|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|LINX B510 3G LT5037MG|LINX A452 3G LT4030PG|LINX A453 3G LT4038PG|LINX A420 3G LS4019PG|LINX A450 3G LT4028PG|Linx A400 3G LT4001PG|Linx C500 3G LT5001PG|Linx PS474S|LS504[01]PL|LT40(47|54)MG|PS1043MG|LS405[01]MG|LS5053ML|LT5048MG|HT7071MG|LT5052ML|HT5035PG|HT4039PG|LT4049PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT1002MG|TT7026MW|VRL42|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
+  regex: 'Digma[_ ]([^;/]+) Build|HIT HT707[10]MG|CITI (?:7 E401 4G|8 E400 4G|ATL 4G|Kids|Octa [178]0|1902 3G|10 E402|Z530 3G)|(CITI[_ ](?:[A-Z0-9]+)[_ ][34]G)[ _][TC][ST](?:[0-9]{4}[PM][LG])|HIT 4G|HT7074ML|IDX5|(iDx10|iDx7)|MVM900H(?:WZ|C)|MVM908HCZ|(iDxD8 3G|iDxD10 3G|iDrQ10 3G|iDxD[45]|iDxQ5|iD[nx]D7(?:[_ ]3G)?)|PS604M|PT452E|Linx.+ [34]G L[TS][0-9]{4}[PM][GL]|Linx PS474S|PS1043MG|HT7071MG|HT5035PG|HT4039PG|NS6902QL|NS9797MG|TS7854M|TS1012E 3G|TT1004PG|TT702[045]MG|TT1002MG|TT7026MW|VRL42|((?:Optima|Platina|Plane)[ _](?:[EM])?(?:[0-9\.ST]+|Prime)(?:[ _][43]G)?)|(VOX[ _](?:[0-9\.A-Z]+)[_ ][43]G)'
   device: 'smartphone'
   models:
     - regex: 'HIT(?: 3G)? HT707[10]MG'
@@ -5006,7 +5006,7 @@ Digma:
       model: 'CITI ATL 4G'
     - regex: '(CITI Z530 3G)'
       model: '$1'
-    - regex: '(CITI [A-Z0-9]+ [34]G) C[ST](?:606[32]ML|4024PG|5009PL|5021ML|5026PL)'
+    - regex: '(CITI [A-Z0-9]+ [34]G) C[ST](?:606[32]ML|4024PG|5009PL|5021ML|502[56]PL)'
       model: '$1'
 
     - regex: 'TS7854M'
@@ -5103,7 +5103,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Y8 Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|S55_Lite|Iron-bone DG750|X10S|X60L|MIX2)(?:[);/ ]|$)'
+  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Y8 Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|S55_Lite|Iron-bone DG750|X10S|X60L|MIX2|Y6 Max|Y6_Piano(?:_black)?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -5146,6 +5146,15 @@ Doogee:
       model: 'Shoot $1'
     - regex: 'Ibiza_F2'
       model: 'Ibiza F2'
+    - regex: 'Y6_Piano_black'
+      model: 'Y6 Piano Black'
+    - regex: 'Y6_Piano'
+      model: 'Y6 Piano'
+    - regex: 'Y6 Max 3D'
+      model: 'Y6 Max 3D'
+    - regex: 'Y6 Max'
+      model: 'Y6 Max'
+
     - regex: '(X5max(?:[_ ]PRO)?)'
       model: '$1'
     - regex: '(?:DOOGEE[ _-])?(BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|Valencia2_Y100pro|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)'
@@ -9255,12 +9264,22 @@ SKG:
   device: 'smartphone'
   model: '$1'
 
+# iVA
+iVA:
+  regex: '(LAMCY (?:L3[05]0|C100|L400)|IVA S6)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'LAMCY (L3[05]0|C100|L400)(?:[);/ ]|$)'
+      model: 'Lamcy $1'
+    - regex: 'IVA S6(?:[);/ ]|$)'
+      model: 'S6'
+
 # Landvo
 Landvo:
   regex: 'XM[123]00|(?<!Blade )S6 Build'
   device: 'smartphone'
   models:
-    - regex: 'S6 Build'
+    - regex: 'S6 Build' # clone Galaxy S6
       model: 'S6'
     - regex: 'XM([123])00([^/;]*) Build'
       model: 'XM$100$2'
@@ -9459,9 +9478,15 @@ Lephone:
 
 # lenco
 Lenco:
-  regex: 'Lenco ([^/;]*) Build'
+  regex: 'Lenco ([^/);]*)(?: Build|[);])'
   device: 'tablet'
-  model: '$1'
+  models:
+    - regex: 'LENCO Diverso-700'
+      device: 'portable media player'
+      model: 'Diverso 700'
+    - regex: 'Lenco ([^/);]*)(?: Build|[);])'
+      model: '$1'
+
 
 # Aligator
 Aligator:
@@ -11699,7 +11724,7 @@ MyTab:
 
 # myphone (myphone.com.ph)
 MyPhone:
-  regex: '(?:MyPhone|MyPad|MyTab)[ _][^;/)]+( Build|\))|Cube_LTE|myTab10II|HAMMER[ _](FORCE|Blade2_PRO|IRON_[23]|Explorer|ENERGY|Titan 2|AXE[_ ](?:M[_ ]LTE|Pro)|Iron 2|Active[2]?(_LTE)?)|IRON_2|C-Smart_pix|myPhone_Fun_8|FUN_18x9|MyPhoneMY27|Prime_4_Lite|myA17|myX12|Pocket_2|Prime_18x9|Prime3Lite|myT6 DTV|myXI1 (?:Plus|Pro)|myXI3|Q_Smart_BE|Brown 1'
+  regex: '(?:MyPhone|MyPad|MyTab)[ _][^;/)]+( Build|\))|Cube_LTE|myTab10II|HAMMER[ _](FORCE|Blade2_PRO|IRON_[23]|Explorer|ENERGY|Titan 2|AXE[_ ](?:M[_ ]LTE|Pro)|Iron 2|Active[2]?(_LTE)?)|IRON_2|C-Smart_pix|myPhone_Fun_8|FUN_18x9|MyPhoneMY27|Prime_4_Lite|myA17|myX12|Pocket_2|Prime_18x9|Prime3Lite|myT6 DTV|myXI1 (?:Plus|Pro)|myXI3|Q_Smart_BE|Brown 1|Q-Smart_III_Plus'
   device: 'smartphone'
   models:
     # explicit table models
@@ -11779,6 +11804,8 @@ MyPhone:
       model: 'Brown 1'
     - regex: 'myPhone[_ ]Pocket[_ ]Pro'
       model: 'Pocket Pro'
+    - regex: 'Q-Smart_III_Plus'
+      model: 'Q-Smart III Plus'
 
     # general detections
     - regex: 'MyPhone[ _]([^;/)]+)( Build|\))'
@@ -20562,16 +20589,6 @@ iGet:
   device: 'tablet'
   model: 'Smart $1'
 
-# iVA
-iVA:
-  regex: '(LAMCY (?:L3[05]0|C100|L400)|IVA S6)(?:[);/ ]|$)'
-  device: 'smartphone'
-  models:
-    - regex: 'LAMCY (L3[05]0|C100|L400)(?:[);/ ]|$)'
-      model: 'Lamcy $1'
-    - regex: 'IVA S6(?:[);/ ]|$)'
-      model: 'S6'
-
 # Phicomm
 Phicomm:
   regex: '(PHICOMM)(?:[);/ ]|$)'
@@ -24203,10 +24220,10 @@ VIWA:
 
 # M-Horse (www.mhorse.com)
 M-Horse:
-  regex: 'M-HORSE|(?:Pure (?:3|2A)|Pure1)(?:[);/ ]|$)'
+  regex: 'M-HORSE|(?:Pure (?:3|2A?)|Pure ?1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Pure ?([13]|2A)(?:[);/ ]|$)'
+    - regex: 'Pure ?([13]|2A?)(?:[);/ ]|$)'
       model: 'Pure $1'
 
 # ProVision (www.provision.co.ir/en)
