feat(device) detect brand Vivo model: Nex A
feat(device) added test brand Meizu models: U20, U10
feat(device) added test brand Sony models: KDL48W605B, KDL40W705C, KD49X8505B, KDL32W603A

--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2139,3 +2139,75 @@
     model: S1
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Opera/9.80 (Linux armv7l; InettvBrowser/2.2 (00014A;SonyDTV140;0001;0001) KDL48W605B; CC/RUS) Presto/2.12.407 Version/12.50
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "12.50"
+    engine: Presto
+    engine_version: 2.12.407
+  device:
+    type: tv
+    brand: Sony
+    model: KDL48W605B
+  os_family: GNU/Linux
+  browser_family: Opera
+-
+  user_agent: Opera/9.80 (Linux armv7l; InettvBrowser/2.2 (00014A;SonyDTV140;0001;0001) KDL40W705C; CC/RUS) Presto/2.12.407 Version/12.50
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "12.50"
+    engine: Presto
+    engine_version: 2.12.407
+  device:
+    type: tv
+    brand: Sony
+    model: KDL40W705C
+  os_family: GNU/Linux
+  browser_family: Opera
+-
+  user_agent: Opera/9.80 (Linux armv7l; InettvBrowser/2.2 (00014A;SonyDTV140;0001;0001) KD49X8505B; CC/RUS) Presto/2.12.407 Version/12.50
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "12.50"
+    engine: Presto
+    engine_version: 2.12.407
+  device:
+    type: tv
+    brand: Sony
+    model: KD49X8505B
+  os_family: GNU/Linux
+  browser_family: Opera
+-
+  user_agent: Opera/9.80 (Linux armv7l; InettvBrowser/2.2 (00014A;SonyDTV115;0002;0100) KDL32W603A; CC/RUS) Presto/2.12.362 Version/12.11
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "12.11"
+    engine: Presto
+    engine_version: 2.12.362
+  device:
+    type: tv
+    brand: Sony
+    model: KDL32W603A
+  os_family: GNU/Linux
+  browser_family: Opera
