--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3218,6 +3218,8 @@ Vivo:
       model: 'Nex 3S'
     - regex: 'vivo NEX S(?:[);/ ]|$)'
       model: 'Nex S'
+    - regex: 'vivo NEX A(?:[);/ ]|$)'
+      model: 'Nex A'
     - regex: 'V1821[AT](?:[);/ ]|$)'
       model: 'Nex Dual Display'
     - regex: 'Vivo ONE(?:[);/ ]|$)'
