feat(device) detect brand Allwinner model: QUAD-CORE T3 K2001O feat(device) detect brand Prestigio models: Grace V7 LTE (PSP7590DUO), Muze F5 LTE (PSP5553DUO), Muze E5 LTE (PSP5545DUO),  MultiPad Wize 1157 4G (PMT1157_4G), MultiPad Wize 1196 3G (PMT1196_3G), MultiPad Wize 3096 3G (PMT3096_3G),  MultiPad Wize 3196 3G (PMT3196_3G)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2137,7 +2137,7 @@ Allview:
 
 # Allwinner
 Allwinner:
-  regex: '(?:QUAD-CORE (?:A64 p3|A33 y3|T3 K2001M)|ZY-07B|UltraOcta-T8|OCTA-CORE T8|OCTOPUS-CORE T8|QuadCore-R16)(?:[);/ ]|$)'
+  regex: '(?:QUAD-CORE (?:A64 p3|A33 y3|T3 K2001M|T3 k2001o)|ZY-07B|UltraOcta-T8|OCTA-CORE T8|OCTOPUS-CORE T8|QuadCore-R16)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'QUAD-CORE A64 p3'
@@ -2152,6 +2152,9 @@ Allwinner:
     - regex: 'QUAD-CORE T3 K2001M'
       device: 'car browser'
       model: 'QUAD-CORE T3 K2001M'
+    - regex: 'QUAD-CORE T3 K2001o'
+      device: 'car browser'
+      model: 'QUAD-CORE T3 K2001O'
     - regex: 'OCTA-CORE T8'
       device: 'car browser'
       model: 'OCTA-CORE T8'
@@ -15575,6 +15578,9 @@ Prestigio:
     - regex: 'PSP5551DUO'
       device: 'smartphone'
       model: 'Grace S5'
+    - regex: 'PSP7590DUO'
+      device: 'smartphone'
+      model: 'Grace V7 LTE'
     - regex: 'PSP5470DUO'
       device: 'smartphone'
       model: 'Grace X5'
@@ -15605,9 +15611,15 @@ Prestigio:
     - regex: 'PSP5513DUO'
       device: 'smartphone'
       model: 'Muze D5 LTE'
+    - regex: 'PSP5553DUO'
+      device: 'smartphone'
+      model: 'Muze F5 LTE'
     - regex: 'PSP5502DUO'
       device: 'smartphone'
       model: 'Muze A5'
+    - regex: 'PSP5545DUO'
+      device: 'smartphone'
+      model: 'Muze E5 LTE'
     - regex: 'PSP3511DUO'
       device: 'smartphone'
       model: 'Muze G3 LTE'
@@ -15662,7 +15674,7 @@ Prestigio:
       model: 'MultiPad Ranger 8.0 3G'
     - regex: 'PMT3208[_ ]3G'
       model: 'MultiPad Wize 8.0 3G'
-    - regex: 'PMT(1177|3618|3131)_([34])GE?'
+    - regex: 'PMT(1177|3618|3131|1157|1196|3[10]96)[_ ]([34])GE?'
       model: 'MultiPad Wize $1 $2G'
     - regex: 'PSP7546DUO([ _][A-Z]{2})?'
       model: 'X Pro'
