feat(device) detect brand Hoffmann models: X Play, X Go, X Pro, X Ultra feat(device) detect brand Coolpad model: Cool 1 (R116)
feat(device) added test brand Philips model: X586
feat(device) added test brand Samsung model: Galaxy A3 (2017) (SM-A320F)
feat(device) added test brand BQ model: Armor (BQ-7082G)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4508,7 +4508,7 @@ Coolpad:
       model: 'Legacy S'
     - regex: 'MTS-T0(?:[);/ ]|$)'
       model: 'N2M'
-    - regex: 'C106-[79](?:[);/ ]|$)'
+    - regex: '(?:C106-[79]|R116)(?:[);/ ]|$)'
       model: 'Cool 1'
     - regex: 'C105-E0(?:[);/ ]|$)'
       model: 'Cool S1'
@@ -6946,16 +6946,17 @@ Hi-Level:
   device: 'tablet'
   model: 'HLV-T$1'
 
-# Hoffmann
+# Hoffmann (hoffmann-electric.com)
 Hoffmann:
-  regex: '(HOFFMANN|Neo[_ ]A[1379]00)(?:[);/ ]|$)'
+  regex: '(HOFFMANN|Neo[_ ]A[1379]00|X-Go|X-Play|X-Pro|X_Ultra)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Neo[_ ](A[1379]00)'
       model: 'Neo $1'
     - regex: 'HOFFMANN[ _]X[-_ ](Prime|Twist|Max)'
       model: 'X $1'
-
+    - regex: 'X[-_](Play|Go|Pro|Ultra)'
+      model: 'X $1'
 
 # Homtom
 Homtom:
